syntax = "proto3";
package com.test.servicet;

message PersonData{
    string first_name = 1;
    string last_name = 2;
}

message PersonRequest{
    PersonData person = 1;
}

message PersonReponse{
    string result = 1;
}

service PersonService{
    // unary api
    rpc Search(PersonRequest) returns (PersonReponse){};

    // Server streaming api
    rpc SearchManyTimes(PersonRequest) returns (stream PersonReponse){};

    // Client streaming api
    rpc ClientStreamSearch(stream PersonRequest) returns (PersonReponse){};

    // bi-directional streaming
    rpc BiDirectionalStreamSearch(stream PersonRequest) returns (stream PersonReponse){};


    rpc ErrorHandlingDemo(PersonRequest) returns (PersonReponse){};

    // API timeout
    rpc DeadLineDemo(PersonRequest) returns (PersonReponse){};

}
